--- a/src/FundamentalsAggregator/FundamentalsAggregator.csproj
+++ b/src/FundamentalsAggregator/FundamentalsAggregator.csproj
@@ -48,10 +48,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exchange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scrapers\IScraper.cs" />
+    <Compile Include="TickerSymbolFormatters\ITickerSymbolFormatter.cs" />
     <Compile Include="Scrapers\MorningStarKeyRatios.cs" />
+    <Compile Include="TickerSymbolFormatters\MorningStarTickerSymbolFormatter.cs" />
     <Compile Include="Scrapers\ScraperException.cs" />
     <Compile Include="Scrapers\ScraperResults.cs" />
+    <Compile Include="TickerSymbol.cs" />
+    <Compile Include="TickerSymbolFormatters\UnsupportedExchangeException.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
