--- a/src/FundamentalsAggregator.Specs/FundamentalsAggregator.Specs.csproj
+++ b/src/FundamentalsAggregator.Specs/FundamentalsAggregator.Specs.csproj
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Compile Include="BeforeAllTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scrapers\YahooFinanceTests.cs" />
     <Compile Include="Scrapers\MorningStarKeyRatiosTests.cs" />
   </ItemGroup>
   <ItemGroup>
