--- a/src/FundamentalsAggregator/packages.config
+++ b/src/FundamentalsAggregator/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="CsvHelper" version="1.5.0" />
   <package id="HtmlAgilityPack" version="1.4.5" />
   <package id="log4net" version="2.0.0" />
   <package id="Newtonsoft.Json" version="4.5.7" />
