--- a/src/FundamentalsAggregator.Specs/FundamentalsAggregator.Specs.csproj
+++ b/src/FundamentalsAggregator.Specs/FundamentalsAggregator.Specs.csproj
@@ -65,6 +65,8 @@
   <ItemGroup>
     <Compile Include="BeforeAllTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scrapers\AssertHelper.cs" />
+    <Compile Include="Scrapers\FtDotComSummaryTests.cs" />
     <Compile Include="Scrapers\FtDotComFinancialsTests.cs" />
     <Compile Include="Scrapers\YahooFinanceTests.cs" />
     <Compile Include="Scrapers\MorningStarKeyRatiosTests.cs" />
