--- a/src/FundamentalsAggregator/FundamentalsAggregator.csproj
+++ b/src/FundamentalsAggregator/FundamentalsAggregator.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <Compile Include="Exchange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scrapers\FtDotComSummary.cs" />
     <Compile Include="Scrapers\FtDotComFinancials.cs" />
     <Compile Include="Scrapers\IScraper.cs" />
     <Compile Include="Scrapers\MorningStarFundamentalsTableParser.cs" />
