--- a/src/FundamentalsAggregator/FundamentalsAggregator.csproj
+++ b/src/FundamentalsAggregator/FundamentalsAggregator.csproj
@@ -53,12 +53,14 @@
   <ItemGroup>
     <Compile Include="Exchange.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scrapers\BloombergBusinessWeekRatios.cs" />
     <Compile Include="Scrapers\FtDotComSummary.cs" />
     <Compile Include="Scrapers\FtDotComFinancials.cs" />
     <Compile Include="Scrapers\IScraper.cs" />
     <Compile Include="Scrapers\MorningStarFundamentalsTableParser.cs" />
     <Compile Include="Scrapers\YahooFinance.cs" />
     <Compile Include="Scrapers\YahooFinanceCsvDto.cs" />
+    <Compile Include="TickerSymbolFormatters\BloombergBusinessWeekFormatter.cs" />
     <Compile Include="TickerSymbolFormatters\FtDotComFormatter.cs" />
     <Compile Include="TickerSymbolFormatters\YahooFinanceFormatter.cs" />
     <Compile Include="TickerSymbolFormatters\ITickerSymbolFormatter.cs" />
