Added a web page and stuff! Looking pretty flash, thanks bootstrap

--- a/src/FundamentalsAggregator/FundamentalsAggregator.csproj
+++ b/src/FundamentalsAggregator/FundamentalsAggregator.csproj
@@ -51,8 +51,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Aggregator.cs" />
     <Compile Include="Exchange.cs" />
+    <Compile Include="AggregationResults.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProviderResults.cs" />
+    <Compile Include="ScraperRunner.cs" />
     <Compile Include="Scrapers\BloombergBusinessWeekRatios.cs" />
     <Compile Include="Scrapers\FtDotComSummary.cs" />
     <Compile Include="Scrapers\FtDotComFinancials.cs" />
