--- a/src/FundamentalsAggregator/packages.config
+++ b/src/FundamentalsAggregator/packages.config
@@ -3,5 +3,5 @@
   <package id="CsvHelper" version="1.5.0" />
   <package id="HtmlAgilityPack" version="1.4.5" />
   <package id="log4net" version="2.0.0" />
-  <package id="Newtonsoft.Json" version="4.5.7" />
+  <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net40" />
 </packages>
