--- a/src/FundamentalsAggregator.Specs/FundamentalsAggregator.Specs.csproj
+++ b/src/FundamentalsAggregator.Specs/FundamentalsAggregator.Specs.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scrapers\AssertHelper.cs" />
     <Compile Include="Scrapers\BloombergBusinessweekRatiosTests.cs" />
+    <Compile Include="Scrapers\GoogleFinanceSummaryTests.cs" />
     <Compile Include="Scrapers\FtDotComSummaryTests.cs" />
     <Compile Include="Scrapers\FtDotComFinancialsTests.cs" />
     <Compile Include="Scrapers\YahooFinanceTests.cs" />
