--- a/src/FundamentalsAggregator/FundamentalsAggregator.csproj
+++ b/src/FundamentalsAggregator/FundamentalsAggregator.csproj
@@ -60,12 +60,14 @@
     <Compile Include="Scrapers\BloombergBusinessWeekRatios.cs" />
     <Compile Include="Scrapers\FtDotComSummary.cs" />
     <Compile Include="Scrapers\FtDotComFinancials.cs" />
+    <Compile Include="Scrapers\GoogleFinanceSummary.cs" />
     <Compile Include="Scrapers\IScraper.cs" />
     <Compile Include="Scrapers\MorningStarFundamentalsTableParser.cs" />
     <Compile Include="Scrapers\NoFundamentalsAvailableException.cs" />
     <Compile Include="Scrapers\YahooFinance.cs" />
     <Compile Include="Scrapers\YahooFinanceCsvDto.cs" />
     <Compile Include="TickerSymbolFormatters\BloombergBusinessWeekFormatter.cs" />
+    <Compile Include="TickerSymbolFormatters\GoogleFinanceFormatter.cs" />
     <Compile Include="TickerSymbolFormatters\FtDotComFormatter.cs" />
     <Compile Include="TickerSymbolFormatters\YahooFinanceFormatter.cs" />
     <Compile Include="TickerSymbolFormatters\ITickerSymbolFormatter.cs" />
