--- a/src/FundamentalsAggregator.Mvc/packages.config
+++ b/src/FundamentalsAggregator.Mvc/packages.config
@@ -1,9 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="jQuery" version="1.5.1" />
-  <package id="jQuery.UI.Combined" version="1.8.11" />
-  <package id="jQuery.Validation" version="1.8.0" />
-  <package id="jQuery.vsdoc" version="1.5.1" />
-  <package id="Modernizr" version="1.7" />
-  <package id="Newtonsoft.Json" version="4.5.8" targetFramework="net40" />
+  <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+  <package id="MicrosoftWebMvc" version="2.0" targetFramework="net40" />
+  <package id="Mvc2Futures" version="2.0.50217.0" targetFramework="net40" />
 </packages>
