--- a/src/FundamentalsAggregator.Mvc/packages.config
+++ b/src/FundamentalsAggregator.Mvc/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
+  <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
   <package id="MicrosoftWebMvc" version="2.0" targetFramework="net40" />
   <package id="Mvc2Futures" version="2.0.50217.0" targetFramework="net40" />
