--- a/src/FundamentalsAggregator.Mvc/packages.config
+++ b/src/FundamentalsAggregator.Mvc/packages.config
@@ -3,6 +3,8 @@
   <package id="Castle.Core" version="3.1.0" targetFramework="net40" />
   <package id="Castle.Windsor" version="3.1.0" targetFramework="net40" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net40" />
+  <package id="le_log4net" version="2.0.3" targetFramework="net40" />
+  <package id="log4net" version="2.0.0" targetFramework="net40" />
   <package id="MicrosoftWebMvc" version="2.0" targetFramework="net40" />
   <package id="Mvc2Futures" version="2.0.50217.0" targetFramework="net40" />
 </packages>
