--- a/src/FundamentalsAggregator.Mvc/Web.config
+++ b/src/FundamentalsAggregator.Mvc/Web.config
@@ -4,9 +4,6 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-  <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
-  </configSections>
   <connectionStrings>
     <add name="ApplicationServices" connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|aspnetdb.mdf;User Instance=true" providerName="System.Data.SqlClient" />
   </connectionStrings>
@@ -16,10 +13,13 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="LOGENTRIES_ACCOUNT_KEY" value="cacb0a78-892a-4d48-b816-3a614bc89453" />
     <add key="LOGENTRIES_LOCATION" value="AppHarbor/Default" />
+    <add key="LOGENTRIES_TOKEN" value="" />
     <add key="log4net.Internal.Debug" value="true" />
+    <add key="LOGENTRIES_ACCOUNT_KEY" value="" />
+    <add key="LOGENTRIES_LOCATION" value="" />
   </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0">
+    <compilation>
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -73,17 +73,4 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <log4net>
-    <appender name="LeAppender" type="log4net.Appender.LeAppender, LeLog4net">
-      <Debug value="true" />
-      <Ssl value="false" />
-      <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d{ddd MMM dd HH:mm:ss zzz yyyy} %logger %: %level%, %m" />
-      </layout>
-    </appender>
-    <root>
-      <level value="ALL" />
-      <appender-ref ref="LeAppender" />
-    </root>
-  </log4net>
 </configuration>
