--- a/src/FundamentalsAggregator.Specs/packages.config
+++ b/src/FundamentalsAggregator.Specs/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.0" />
-  <package id="Machine.Specifications" version="0.5.7" />
-  <package id="NUnit" version="2.6.0.12054" />
+  <package id="Machine.Specifications" version="0.5.10" targetFramework="net40" />
+  <package id="NUnit" version="2.6.2" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" />
   <package id="SharpTestsEx" version="1.1.1" />
 </packages>
