--- a/src/FundamentalsAggregator.Specs/packages.config
+++ b/src/FundamentalsAggregator.Specs/packages.config
@@ -3,6 +3,6 @@
   <package id="log4net" version="2.0.0" />
   <package id="Machine.Specifications" version="0.5.10" targetFramework="net40" />
   <package id="NUnit" version="2.6.2" targetFramework="net40" />
-  <package id="RhinoMocks" version="3.6.1" />
+  <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
   <package id="SharpTestsEx" version="1.1.1" />
 </packages>
