--- a/src/FundamentalsAggregator.Mvc/FundamentalsAggregator.Mvc.csproj
+++ b/src/FundamentalsAggregator.Mvc/FundamentalsAggregator.Mvc.csproj
@@ -88,7 +88,9 @@
     <Reference Include="System.Web.Services" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppHarborErrorAttribute.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="LogEvent.cs" />
     <Compile Include="MvcWindsorServiceLocator.cs" />
     <Compile Include="TruthyBooleanModelBinder.cs" />
     <Compile Include="JsonNetResult.cs" />
