Enabling directory browsing

--- a/src/FundamentalsAggregator.Mvc/Web.config
+++ b/src/FundamentalsAggregator.Mvc/Web.config
@@ -66,6 +66,7 @@
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     <httpErrors errorMode="Detailed" />
+    <directoryBrowse enabled="true"/>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
