Added Neff Test + favicon + tooltips.

--- a/src/FundamentalsAggregator.Mvc/FundamentalsAggregator.Mvc.csproj
+++ b/src/FundamentalsAggregator.Mvc/FundamentalsAggregator.Mvc.csproj
@@ -226,6 +226,7 @@
     <Content Include="Content\themes\base\jquery.ui.theme.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
