--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\MvcApplication1\packages.config" />
   <repository path="..\src\FundamentalsAggregator.Mvc\packages.config" />
   <repository path="..\src\FundamentalsAggregator.Specs\packages.config" />
   <repository path="..\src\FundamentalsAggregator\packages.config" />
