--- a/src/FundamentalsAggregator.Mvc/Web.config
+++ b/src/FundamentalsAggregator.Mvc/Web.config
@@ -19,6 +19,7 @@
     <add key="LOGENTRIES_LOCATION" value="" />
   </appSettings>
   <system.web>
+    <compilation debug="false" targetFramework="4.0"/>
     <customErrors mode="Off" />
     <compilation debug="true">
       <assemblies>
