Fix web.config compilations element twice

--- a/src/FundamentalsAggregator.Mvc/Web.config
+++ b/src/FundamentalsAggregator.Mvc/Web.config
@@ -19,9 +19,8 @@
     <add key="LOGENTRIES_LOCATION" value="" />
   </appSettings>
   <system.web>
-    <compilation debug="false" targetFramework="4.0"/>
     <customErrors mode="Off" />
-    <compilation debug="true">
+    <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
         <add assembly="System.Web.Helpers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
