Fixed bug in NeffTest.

--- a/src/FundamentalsAggregator.Mvc/FundamentalsAggregator.Mvc.csproj
+++ b/src/FundamentalsAggregator.Mvc/FundamentalsAggregator.Mvc.csproj
@@ -226,7 +226,9 @@
     <Content Include="Content\themes\base\jquery.ui.theme.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="favicon.ico" />
+    <Content Include="favicon.ico">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.5.1-vsdoc.js" />
     <Content Include="Scripts\jquery-1.5.1.js" />
